--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,4 +34,7 @@ dependencies {
     compile 'com.github.ganfra:material-spinner:1.1.1'
     compile 'it.neokree:MaterialTabs:0.11'
     compile 'com.github.rey5137:material:1.2.2'
+    compile 'com.parse.bolts:bolts-android:1.+'
+    compile 'com.parse:parse-android:1.+'
+    compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.5'
 }
