--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,6 +36,15 @@
             </intent-filter>
         </activity>
         <activity
+            android:name=".activity.CartActivity"
+            android:label="@string/app_name">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
+        <activity
             android:name=".activity.WizardActivity"
             android:label="@string/app_name"
             android:theme="@style/MyMaterialThemeSecond">
