--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,5 +37,5 @@ dependencies {
     compile 'com.parse.bolts:bolts-android:1.+'
     compile 'com.parse:parse-android:1.+'
     compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.5'
-    compile 'com.oguzdev:CircularFloatingActionMenu:1.0.2'
+    compile 'com.github.clans:fab:1.6.2'
 }
