--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,4 +38,5 @@ dependencies {
     compile 'com.parse:parse-android:1.+'
     compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.5'
     compile 'com.github.clans:fab:1.6.2'
+    compile 'com.github.traex.rippleeffect:library:1.3'
 }
