--- a/local.properties
+++ b/local.properties
@@ -7,6 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Wed Dec 23 00:35:40 GMT+07:00 2015
-ndk.dir=/Users/HoangHiep/Library/Android/sdk/ndk-bundle
-sdk.dir=/Users/HoangHiep/Library/Android/sdk
+#Sat Dec 26 22:14:27 ICT 2015
+sdk.dir=/home/tuanvu/Android/Sdk
