--- a/local.properties
+++ b/local.properties
@@ -7,5 +7,6 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sun Dec 27 23:35:00 ICT 2015
-sdk.dir=/home/tuanvu/Android/Sdk
+#Mon Dec 28 09:55:11 GMT+07:00 2015
+ndk.dir=/Users/HoangHiep/Library/Android/sdk/ndk-bundle
+sdk.dir=/Users/HoangHiep/Library/Android/sdk
