--- a/local.properties
+++ b/local.properties
@@ -7,6 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Wed Dec 30 15:45:19 GMT+07:00 2015
-ndk.dir=/Users/HoangHiep/Library/Android/sdk/ndk-bundle
-sdk.dir=/Users/HoangHiep/Library/Android/sdk
+#Thu Dec 31 09:22:24 ICT 2015
+sdk.dir=/home/tuanvu/Android/Sdk
