--- a/local.properties
+++ b/local.properties
@@ -7,5 +7,6 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Thu Dec 31 09:22:24 ICT 2015
-sdk.dir=/home/tuanvu/Android/Sdk
+#Sat Jan 02 01:47:28 GMT+07:00 2016
+ndk.dir=/Users/HoangHiep/Library/Android/sdk/ndk-bundle
+sdk.dir=/Users/HoangHiep/Library/Android/sdk
