--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,7 +40,11 @@ dependencies {
     compile 'com.github.clans:fab:1.6.2'
     compile 'com.github.traex.rippleeffect:library:1.3'
     compile 'com.github.nirhart:parallaxscroll:1.0'
+    compile 'com.android.support:multidex:1.0.0'
     compile ('cn.trinea.android.view.autoscrollviewpager:android-auto-scroll-view-pager:1.1.2') {
         exclude module: 'support-v4'
+    }
+    androidTestCompile('com.android.support:multidex-instrumentation:1.0.1') {
+        exclude group: 'com.android.support', module: 'multidex'
     }
 }
