--- a/local.properties
+++ b/local.properties
@@ -7,5 +7,6 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sat Jan 02 21:32:57 ICT 2016
-sdk.dir=/home/tuanvu/Android/Sdk
+#Sun Jan 03 17:17:11 GMT+07:00 2016
+ndk.dir=/Users/HoangHiep/Library/Android/sdk/ndk-bundle
+sdk.dir=/Users/HoangHiep/Library/Android/sdk
