--- a/local.properties
+++ b/local.properties
@@ -7,5 +7,6 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Mon Jan 04 09:33:03 ICT 2016
-sdk.dir=/home/tuanvu/Android/Sdk
+#Wed Jan 06 15:01:44 GMT+07:00 2016
+ndk.dir=/Users/HoangHiep/Library/Android/sdk/ndk-bundle
+sdk.dir=/Users/HoangHiep/Library/Android/sdk
